update quick-button: fix ty-footer z-index error

--- a/plugin/global/styles/quick-button.css
+++ b/plugin/global/styles/quick-button.css
@@ -1,3 +1,7 @@
+.ty-footer {
+    z-index: 9999 !important;
+}
+
 #plugin-quick-button {
     position: fixed;
     display: grid;
